# autofix

./: .env.example  .gitignore  CLAUDE.md  COMMIT_MESSAGE.md  Cargo.toml  README.md
.github/workflows/: release.yml
.specify/memory/: constitution.md
specs/001-llm-provider-support/: IMPLEMENTATION_STATUS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-llm-provider-support/checklists/: requirements.md
specs/001-llm-provider-support/contracts/: llm_provider_trait.md
specs/002-release-build-artifacts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-release-build-artifacts/checklists/: requirements.md
specs/002-release-build-artifacts/contracts/: workflow-contract.md
src/: autofix_command.rs  autofix_pipeline.rs  main.rs  rate_limiter.rs  test_command.rs  xc_test_result_attachment_handler.rs  xc_workspace_file_locator.rs  xcresultparser.rs  xctestresultdetailparser.rs
src/llm/: claude_provider.rs  config.rs  mod.rs  ollama_provider.rs  openai_provider.rs  provider_trait.rs
src/pipeline/: autofix_pipeline.rs  mod.rs  prompts.rs
src/tools/: code_editor_tool.rs  directory_inspector_tool.rs  mod.rs  test_runner_tool.rs
tests/fixtures/: README.md  test_detail.json
tests/fixtures/sample.xcresult/: Info.plist  database.sqlite3
tests/fixtures/sample.xcresult/Data/: data.0~-DKuQqeXM0lvnJmy2ttaqqfqL2qTCS9_KhP2DsG500qgQfTZpbfWAGm0ePyPX6ffF82___hmzTWwdtZsca9g5g==  data.0~-xDSEnd62L5Bdt3LX3CtwCI-OB_uO-eAIyXKBkt8N5sJrKujgcM09CIw_SAArleVKTlK871-bHvned25laKMtA==  (+56 more)
