[package]
name = "autofix"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4"] }
anthropic-sdk-rust = "0.1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
base64 = "0.22"
